Fix crash in WebApkInstaller::InstallOrUpdateWebApk()

The crash was introduced in
https://chromium-review.googlesource.com/c/chromium/src/+/602750/
WebApkInstaller::install_primary_icon_ is only initialized in the
install path

BUG=759212,755636

Change-Id: Ia3054b929ece122539d98ae0b9adc09533ff2f76
Reviewed-on: https://chromium-review.googlesource.com/636664
Reviewed-by: Xi Han <hanxi@chromium.org>
Reviewed-by: Yaron Friedman <yfriedman@chromium.org>
Commit-Queue: Yaron Friedman <yfriedman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497761}
Former-commit-id: 9705d4d3adbaeafde118dcee7848233e272c2d91